crates/parser/tests/snapshots/block_string_only_empty_lines.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-only-empty-lines

## Input

```
key |


a value

```

## CST

```
SOURCE_FILE@0..16
  ENTRY@0..6
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..6
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
  NEWLINE@6..7 "\n"
  NEWLINE@7..8 "\n"
  ENTRY@8..15
    WORD_KEY@8..9
      WORD@8..9 "a"
    SPACE@9..10 " "
    LINE_STRING@10..15
      STRING@10..15 "value"
  NEWLINE@15..16 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@8..9 "a",
            },
            value: LineString {
                string: STRING@10..15 "value",
            },
        },
    ],
}
```

vim:ft=markdown
