crates/parser/tests/snapshots/block_string_tab_after_content.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-tab-after-content

## Input

```
foo |
  bar
	baz

```

## CST

```
SOURCE_FILE@0..17
  ENTRY@0..12
    WORD_KEY@0..3
      WORD@0..3 "foo"
    SPACE@3..4 " "
    BLOCK_STRING@4..11
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      LINE_STRING@8..11
        STRING@8..11 "bar"
    NEWLINE@11..12 "\n"
  ERROR@12..16
    TAB@12..13 "\t"
    WORD@13..16 "baz"
  NEWLINE@16..17 "\n"
```

## Syntax Error

```
[
    SyntaxError {
        message: "tab indent is not allowed, skipping this line",
        range: 12..12,
    },
]
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "foo",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@8..11 "bar",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
