crates/parser/tests/snapshots/block_string_whitespace_only_line.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-whitespace-only-line

## Input

```
foo |
   
  a

```

## CST

```
SOURCE_FILE@0..14
  ENTRY@0..13
    WORD_KEY@0..3
      WORD@0..3 "foo"
    SPACE@3..4 " "
    BLOCK_STRING@4..13
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      SPACE@8..9 " "
      LINE_STRING@9..9
      NEWLINE@9..10 "\n"
      SPACE@10..12 "  "
      LINE_STRING@12..13
        STRING@12..13 "a"
  NEWLINE@13..14 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "foo",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@12..13 "a",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
