crates/parser/tests/snapshots/block_string_wsln_above_base.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-wsln-above-base

## Input

```
key |
   
  a
   
  b

```

## CST

```
SOURCE_FILE@0..22
  ENTRY@0..22
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..21
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      SPACE@8..9 " "
      LINE_STRING@9..9
      NEWLINE@9..10 "\n"
      SPACE@10..12 "  "
      LINE_STRING@12..13
        STRING@12..13 "a"
      NEWLINE@13..14 "\n"
      SPACE@14..16 "  "
      SPACE@16..17 " "
      LINE_STRING@17..17
      NEWLINE@17..18 "\n"
      SPACE@18..20 "  "
      LINE_STRING@20..21
        STRING@20..21 "b"
    NEWLINE@21..22 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@12..13 "a",
                    },
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@20..21 "b",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
