crates/parser/tests/snapshots/brace_alone_as_key.snap
---
source: crates/parser/tests/snapshots.rs
---
# brace-alone-as-key

## Input

```
{
a v

```

## CST

```
SOURCE_FILE@0..6
  ENTRY@0..1
    WORD_KEY@0..1
      WORD@0..1 "{"
  NEWLINE@1..2 "\n"
  ENTRY@2..6
    WORD_KEY@2..3
      WORD@2..3 "a"
    SPACE@3..4 " "
    LINE_STRING@4..5
      STRING@4..5 "v"
    NEWLINE@5..6 "\n"
```

## Syntax Error

```
[
    SyntaxError {
        message: "missing value for the key",
        range: 1..1,
    },
]
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..1 "{",
            },
            value: none,
        },
        Entry {
            key: WordKey {
                word: WORD@2..3 "a",
            },
            value: LineString {
                string: STRING@4..5 "v",
            },
        },
    ],
}
```

vim:ft=markdown
